<resources>
    <string name="app_name">weibo</string>
    <string name="home">首页</string>
    <string name="profile">个人资料</string>
    <string name="logout">注销</string>
    <string name="detail">正文</string>
    <string name="weibo">微博</string>
    <string name="oauthing">授权中</string>
    <string name="sina_server_error">检测到你跳转到错误页面，这是因为新浪微博第三方认证服务器出错，多次重复操作依然不行的话尝试换网络，四次元无能为力</string>
    <string name="token_expires_in_time">请注意，根据新浪微博的平台政策，刚添加的帐号会在 %s 天后过期，到时需要重新登录，在授权过期之前重复登陆不会刷新剩余天数</string>
    <string name="your_token_is_expired">检测到你的授权信息已经过期了，请重新授权一次</string>
    <string name="logout_to_login_again">返回帐号管理页面，重新授权</string>
    <string name="dialog_title_error">出错啦</string>
    <string name="login_again">重新授权</string>
    <string name="have_account_whose_token_is_expired">有帐号已经过期，无法收取新消息</string>
    <string name="token_has_expired">已过期</string>
    <string name="dont_have_other_account">没有多余帐号可供切换</string>
    <string name="tip_dialog_title">提示</string>
    <string name="tip_dialog_content">
        1. 搜索、私信、个人资料编辑都没接口做\n
        2. 受新浪微博政策限制，帐号隔3个月就会过期，需要重新登录\n
        3. 登录是在新浪网站上进行的，登录不了找新浪\n
        4. Flyme 和 Miui 这2个系统的问题都不解决
        5. 没适配到平板，不推荐5寸+设备使用这个应用
        6. 觉得不爽就老老实实用官方客户端\n
    </string>
    <string name="title_changelog">更新日志</string>
    <string name="changelog_close">关闭</string>
    <string name="weibo_emotions">微博表情</string>
    <string name="download_emotions">下载表情</string>
    <string name="background_downloading">后台下载中</string>
    <string name="empty">空</string>
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="sec">秒前</string>
    <string name="justnow">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy年 M月d日 HH:mm</string>
    <string name="close">关闭</string>
    <string name="big_pic">原图</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="copy_to_clipboard">复制</string>
    <string name="copy_successfully">复制完成</string>
    <string name="have_copied">已经复制 %s</string>
    <string name="open">打开</string>
    <string name="switch_to_another_theme">切换主题</string>
    <string name="copy">复制</string>
    <string name="timeout">网络有问题，连不上</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="unknown_sina_network_error">新浪微博某些网络节点又出故障，换个网络试试</string>
    <string name="sd_card_in_not_mounted">SD卡未挂载</string>
    <string name="something_error">发生故障</string>
    <string name="please_deleted_cache_dir">权限出错，无法读取存储空间，需要用户手动删除SD卡下的 /Android/data/org.qii.weiciyuan 目录</string>
    <string name="refresh">刷新</string>
    <string name="refreshing">刷新中……</string>
    <string name="no_new_message">没有新消息</string>
    <string name="total">共计</string>
    <string name="new_messages_count">%s条新消息</string>
    <string name="new_messages">条新消息</string>
    <string name="old_messages">条旧消息</string>
    <string name="weibos">条微博</string>
    <string name="loading">载入中……</string>
    <string name="click_to_load_some_older_msg">点击载入中间数据</string>
    <string name="loading_middle_msg">载入中间数据……</string>
    <string name="click_to_load_older_message">网络有问题，点击重新载入</string>
    <string name="older_message_empty">没有更早的消息了</string>
    <string name="more">载入更多</string>
    <string name="browser_all_messages">浏览全部微博</string>
    <string name="message_list">消息列表</string>
    <string name="message_number">微博消息</string>
    <string name="following_list">关注列表</string>
    <string name="fan_list">粉丝列表</string>
    <string name="topic_number">话题数</string>
    <string name="topic_list">话题列表</string>
    <string name="weibo_number">微博数</string>
    <string name="follow_him">关注</string>
    <string name="manage_group">管理分组</string>
    <string name="unfollow_him">取消关注</string>
    <string name="follow_successfully">关注成功</string>
    <string name="unfollow_successfully">已经取消关注</string>
    <string name="modify_successfully">修改完成</string>
    <string name="remove_fan_successfully">Ta 已经不再关注你了</string>
    <string name="m">男</string>
    <string name="f">女</string>
    <string name="verified_user">认证账户</string>
    <string name="verified_reason">新浪认证</string>
    <string name="is_following_me">正在关注</string>
    <string name="mentions">提及</string>
    <string name="comments">评论</string>
    <string name="discover">探索</string>
    <string name="me">个人</string>
    <string name="repost">转发</string>
    <string name="mail">私信</string>
    <string name="info">资料</string>
    <string name="write_weibo">写微博</string>
    <string name="at_other">添加好友</string>
    <string name="only_at_char">"@</string>
    <string name="emoticon">表情</string>
    <string name="word_emoticon">颜文字</string>
    <string name="topic">话题</string>
    <string name="txt_to_pic">文字转图片</string>
    <string name="clear_content">清空内容</string>
    <string name="are_you_sure">确定吗？</string>
    <string name="ask_clear">清空内容？</string>
    <string name="short_content_middle">精简中间\@</string>
    <string name="short_content_right">精简右侧\@</string>
    <string name="clear">清空</string>
    <string name="add_gps">添加GPS</string>
    <string name="add_pic">添加照片</string>
    <string name="add_emoticon">添加表情</string>
    <string name="view_gps">查看</string>
    <string name="delete_gps">删除</string>
    <string name="comment_cant_be_empty">评论不能为空</string>
    <string name="send_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="cancel_send">取消上传</string>
    <string name="retry_send">重新发送</string>
    <string name="send_faile_click_to_open">发送失败，点击打开</string>
    <string name="send_failed_and_save_to_draft">发送失败，已保存到草稿箱</string>
    <string name="cancel_send_and_save_to_draft">取消上传，已保存到草稿箱</string>
    <string name="click_to_open_draft">点击打开草稿箱</string>
    <string name="click_to_open">点击打开</string>
    <string name="background_sending">发送中</string>
    <string name="wait_server_response">发送完，等结果</string>
    <string name="send_photo">发送照片</string>
    <string name="dont_have_account">没用可用的发微博帐号</string>
    <string name="content_cant_be_empty">内容不能为空</string>
    <string name="content_cant_be_empty_and_dont_have_account">内容不能为空，当前也没可用的发微博帐号</string>
    <string name="content_words_number_too_many">字数太多了</string>
    <string name="enable_comment_when_repost">评论给当前微博</string>
    <string name="enable_comment_to_ori_when_repost">评论给原微博</string>
    <string name="enable_comment_to_ori_when_comment">评论给原微博</string>
    <string name="enable_repost">转发到我的微博</string>
    <string name="comment_detail">评论</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="dont_have_camera_app">该设备没有拍照应用</string>
    <string name="select">选择</string>
    <string name="get_the_last_picture">刚拍的照片</string>
    <string name="dont_have_the_last_picture">没有找到拍过的照片</string>
    <string name="take_camera">拍照</string>
    <string name="select_pic">图库</string>
    <string name="send">发送</string>
    <string name="sending">发送中</string>
    <string name="photo">照片</string>
    <string name="say_something">说点什么吧……</string>
    <string name="left">剩余</string>
    <string name="share_pic">分享图片</string>
    <string name="save_to_draft">保存到草稿箱</string>
    <string name="do_you_want_to_save">要保存到草稿箱吗？</string>
    <string name="save">保存</string>
    <string name="convert_successfully">转换成功，你可以精简文字了</string>
    <string name="convert_failed">转换失败</string>
    <string name="failed_reason">发送失败：%s</string>
    <string name="you_cancel_login">你取消了授权</string>
    <string name="login_success">授权成功</string>
    <string name="update_account_success">已有该帐号，授权信息更新成功</string>
    <string name="account_management">帐号管理</string>
    <string name="remove_successfully">删除成功</string>
    <string name="add_account">添加</string>
    <string name="oauth_login">网页授权</string>
    <string name="hack_login">黑魔法授权</string>
    <string name="official_app_login">官方客户端授权</string>
    <string name="login">登录</string>
    <string name="logining">登录中</string>
    <string name="email_cant_be_empty">登录邮箱不能为空</string>
    <string name="password_cant_be_empty">密码不能为空</string>
    <string name="login_email">登录邮箱</string>
    <string name="login_password">密码</string>
    <string name="app_key">尾巴</string>
    <string name="sending_comment">发送评论</string>
    <string name="sending_repost">发送转发</string>
    <string name="ori_picture">原图</string>
    <string name="browser_part_picture">查看局部图片</string>
    <string name="browser_picture">查看图片</string>
    <string name="save_pic_album">保存到图片文件夹</string>
    <string name="force_download">重新下载</string>
    <string name="already_saved">已经保存过了</string>
    <string name="cant_save_pic">发生错误，无法保存</string>
    <string name="save_to_album_successfully">保存成功</string>
    <string name="switch_to_middle_pic">中等图</string>
    <string name="switch_to_ori_pic">原图</string>
    <string name="cant_open_deleted_weibo">原微博已经被删除，看不懂中文吗？</string>
    <string name="retry_download_pic">重新下载图片</string>
    <string name="browser_map">查看地图</string>
    <string name="nearby">周边</string>
    <string name="bilateral">互相关注</string>
    <string name="remove_fan">移除粉丝</string>
    <string name="select_group">选择分组</string>
    <string name="all_people">所有人</string>
    <string name="all_following">关注的人</string>
    <string name="original">原创</string>
    <string name="mentions_weibo">"发@"</string>
    <string name="all_people_send_to_me">被评</string>
    <string name="following_people_send_to_me">关注的人发给我的</string>
    <string name="mentions_to_me">"评@"</string>
    <string name="following_people_mentions_to_me">"关注的人@我的评论"</string>
    <string name="my_comment">评人</string>
    <string name="quick_comment">快速评论</string>
    <string name="quick_repost">快速转发原创微博</string>
    <string name="following_number">关注数</string>
    <string name="fan_number">粉丝数</string>
    <string name="neighbor">友邻</string>
    <string name="address">地址</string>
    <string name="blog_url">博客</string>
    <string name="personal_info">个人资料</string>
    <string name="my_info">我的资料</string>
    <string name="my_fav_list">我的收藏列表</string>
    <string name="intro">简介</string>
    <string name="nickname">昵称</string>
    <string name="at">"@TA"</string>
    <string name="sum">统计</string>
    <string name="edit">编辑</string>
    <string name="edit_my_profile">编辑个人资料</string>
    <string name="edit_successfully">编辑资料成功</string>
    <string name="nickname_cant_be_empty">昵称不能为空</string>
    <string name="nickname_cant_have_space">昵称不能有空格</string>
    <string name="user_not_exists">用户不存在</string>
    <string name="network_error">网络有问题</string>
    <string name="fetching_user_info">获取用户信息……</string>
    <string name="search">搜索</string>
    <string name="status">微博</string>
    <string name="user">用户</string>
    <string name="dm">私信</string>
    <string name="write_dm">写信</string>
    <string name="select_dm_receiver">选择收信人</string>
    <string name="clear_dm">删除全部</string>
    <string name="input_username">输入用户名</string>
    <string name="he_is_not_following_you">Ta没关注你</string>
    <string name="he_is_following_you">Ta关注了你</string>
    <string name="you_is_following_he">你关注了Ta</string>
    <string name="following_each_other">互相关注</string>
    <string name="stranger_each_other">彼此是陌生人</string>
    <string name="friend_group">好友分组</string>
    <string name="add_group">添加分组</string>
    <string name="input_group_name">输入分组名</string>
    <string name="modify_group_name">修改分组名称</string>
    <string name="remove_group">删除分组</string>
    <string name="remove_group_content">删除分组（不会取消关注）</string>
    <string name="group_name_must_less_than_ten_chinese_words">分组名限制在10个汉字内</string>
    <string name="favourite">收藏</string>
    <string name="setting">设置</string>
</resources>