<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp" >

            <!-- 200-1300dp gone in another file,yangxj@20131018 -->

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/yang_profile_bg"
                android:scaleType="centerCrop" />
            <!-- change background,android:background="?profile_top_photo_background_color"yangxj@20131018 -->

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <!-- 10-5dp,yangxj@20131018 -->

            <ImageView
                android:id="@+id/left_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:paddingTop="15dp"
                android:src="@drawable/ic_profile_info_viewpager_point"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/center_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:paddingTop="15dp"
                android:src="@drawable/ic_profile_info_viewpager_point"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/right_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:paddingTop="15dp"
                android:src="@drawable/ic_profile_info_viewpager_point"
                android:visibility="visible" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <LinearLayout
            android:id="@+id/weibo_count_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/weibo_count"
                style="@style/profileStatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                style="@style/profileStatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weibo_number" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="?profile_detail_count_divider_color" />

        <LinearLayout
            android:id="@+id/friends_count_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/friends_count"
                style="@style/profileStatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                style="@style/profileStatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/following_number" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="?profile_detail_count_divider_color" />

        <LinearLayout
            android:id="@+id/fans_count_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/fans_count"
                style="@style/profileStatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                style="@style/profileStatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fan_number" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="?profile_detail_count_divider_color" />

        <LinearLayout
            android:id="@+id/topics_count_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/topics_count"
                style="@style/profileStatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                style="@style/profileStatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topic_number" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?profile_detail_count_bottom_color" />

</LinearLayout>